TEST_PROGRAMS/VALID/01/#26.1.go
package main

func main() {
	if true {
	  var q = 4
	}
}
