TEST_PROGRAMS/INVALID/04/93.go
package main

func main() {
    var x = 3, 4
}
